Adicionado algumas algumas informações a tela do carrinho

--- a/src/main/webapp/atualizarProduto.xhtml
+++ b/src/main/webapp/atualizarProduto.xhtml
@@ -14,6 +14,7 @@
 			<h:inputHidden value="#{produtoBean.produto.sku}" />
 			<h:inputHidden value="#{produtoBean.produto.dataCadastro}" />
 			<h:inputHidden value="#{produtoBean.produto.imagem}" />
+			<h:inputHidden value="#{produtoBean.produto.nota}" />
 			<p:panelGrid columns="2" layout="grid">
 				<f:facet name="header">Dados do Produto</f:facet>
 				<f:facet name="footer">
