--- a/src/main/webapp/cadastroCategoria.xhtml
+++ b/src/main/webapp/cadastroCategoria.xhtml
@@ -6,24 +6,29 @@
 	xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
 	xmlns:f="http://xmlns.jcp.org/jsf/core">
 <ui:composition template="/WEB-INF/template/template.xhtml">
-	<ui:define name="tituloJanela">Cadastro categoria</ui:define>
+	<ui:define name="tituloJanela">Categoria</ui:define>
 	<ui:define name="conteudo">
 		<h:form>
 			<h:inputHidden value="#{categoriaBean.categoria.id}" />
 			<p:growl id="messages" autoUpdate="true" life="3000" />
 			<div id="main" align="center">
+				<p:breadCrumb>
+					<p:menuitem value="Início" url="#" icon="pi pi-home" />
+					<p:menuitem value="Categorias" url="listaCategoria.xhtml?faces-redirect=true" />
+					<p:menuitem url="cadastroCategoria.xhtml?faces-redirect=true"
+						title="Adicionar" icon="pi pi-plus" />
+				</p:breadCrumb>
 				<p:panelGrid columns="2" layout="grid"
 					styleClass="showcase-text-align-center">
-					<f:facet name="header">Cadastro de Categoria</f:facet>
+					<f:facet name="header">Categoria</f:facet>
 					<f:facet name="footer">
-						<p:commandButton update="@form,messages" value="Cancelar"
-							action="listaCategoria.xhtml?faces-redirect=true" />
-						<p:commandButton value="Salvar" action="#{categoriaBean.salvar()}"
-							update="@form,messages" />
+						<div style="text-align:center;">
+							<p:commandButton update="@form,messages" value="Cancelar"
+								action="listaCategoria.xhtml?faces-redirect=true" />
+							<p:commandButton value="Salvar"
+								action="#{categoriaBean.salvar()}" update="@form,messages" />
+						</div>
 					</f:facet>
-					<p:outputLabel value="Id" for="id" />
-					<p:inputText id="id" value="#{categoriaBean.categoria.id}"
-						placeholder="Digite o número do id" />
 					<p:outputLabel value="Nome" for="nome" />
 					<p:inputText id="nome" value="#{categoriaBean.categoria.nome}"
 						placeholder="Digite o nome da categoria" />
