--- a/src/main/webapp/cadastroMarca.xhtml
+++ b/src/main/webapp/cadastroMarca.xhtml
@@ -6,14 +6,25 @@
 	xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
 	xmlns:f="http://xmlns.jcp.org/jsf/core">
 <ui:composition template="/WEB-INF/template/template.xhtml">
-	<ui:define name="tituloJanela">Cadastro marca</ui:define>
+	<ui:define name="tituloJanela">Marca</ui:define>
 	<ui:define name="conteudo">
 		<h:form>
 			<p:growl autoUpdate="true" life="3000" />
+			<p:breadCrumb>
+				<p:menuitem value="Início" url="#" icon="pi pi-home" />
+				<p:menuitem value="Marcas" url="listaMarca.xhtml?faces-redirect=true" />
+				<p:menuitem url="cadastroMarca.xhtml?faces-redirect=true"
+					title="Adicionar" icon="pi pi-plus" />
+			</p:breadCrumb>
 			<h:inputHidden value="#{marcaBean.marca.id}" />
 			<div id="main" align="center">
 				<p:panelGrid columns="2" layout="grid"
 					styleClass="showcase-text-align-center">
+					<f:facet name="header">Marca</f:facet>
+					<f:facet name="footer">
+						<p:commandButton value="Salvar" action="#{marcaBean.salvar()}"
+							update="@form" />
+					</f:facet>
 					<p:outputLabel value="Nome" for="nome" />
 					<p:inputText id="nome" value="#{marcaBean.marca.nome}"
 						placeholder="Digite o nome da marca" />
@@ -21,8 +32,6 @@
 					<p:selectBooleanCheckbox id="ativo"
 						value="#{marcaBean.marca.ativo}" />
 				</p:panelGrid>
-				<p:commandButton value="Salvar" action="#{marcaBean.salvar()}"
-					update="@form" />
 			</div>
 		</h:form>
 	</ui:define>
