--- a/src/main/webapp/listaFornecedor.xhtml
+++ b/src/main/webapp/listaFornecedor.xhtml
@@ -11,9 +11,13 @@
 	<ui:define name="tituloJanela">Todos Fornecedores</ui:define>
 	<ui:define name="conteudo">
 		<p:dataTable var="fornecedor" value="#{fornecedorBean.lista}"
-			frame="box" rules="all" cellpadding="3">
+			frame="box" rules="all" cellpadding="3" paginator="true"
+			paginatorTemplate="{FirstPageLink} {PreviousPageLink} {PageLinks} 
+				{NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
+			rowsPerPageTemplate="15,30,45">
 			<f:facet name="header">
-				<p:commandButton value="Novo" action="alterarFornecedor.xhtml?faces-redirect=true" />
+				<p:commandButton value="Novo"
+					action="alterarFornecedor.xhtml?faces-redirect=true" />
 			</f:facet>
 			<p:column headerText="CNPJ">
 				<h:outputText value="#{fornecedor.cnpj}" />
@@ -22,20 +26,21 @@
 			<p:column headerText="Nome">
 				<h:outputText value="#{fornecedor.nome}" />
 			</p:column>
-			
+
 			<p:column headerText="Estado">
 				<h:outputText value="#{fornecedor.estado}" />
 			</p:column>
 
 			<p:column headerText="Ativo">
-				<h:outputText value="#{fornecedor.ativo == true ? 'Ativo' : 'Desativado'}" />
+				<h:outputText
+					value="#{fornecedor.ativo == true ? 'Ativo' : 'Desativado'}" />
 			</p:column>
 
 			<p:column headerText="Alterar">
 				<p:commandButton action="#{fornecedorBean.alterar(fornecedor)}"
 					value="Alterar" />
 			</p:column>
-	
+
 		</p:dataTable>
 	</ui:define>
 </ui:composition>
