--- a/src/main/webapp/listaProduto.xhtml
+++ b/src/main/webapp/listaProduto.xhtml
@@ -12,13 +12,17 @@
 	<ui:define name="conteudo">
 		<h:form id="form">
 			<p:breadCrumb>
-				<p:menuitem value="Início" url="#" icon="pi pi-home"/>
+				<p:menuitem value="Início" url="#" icon="pi pi-home" />
 				<p:menuitem value="Produtos" url="#" />
-				<p:menuitem  url="cadastroProduto.xhtml?faces-redirect=true" title="Adicionar" icon="pi pi-plus"/>
+				<p:menuitem url="cadastroProduto.xhtml?faces-redirect=true"
+					title="Adicionar" icon="pi pi-plus" />
 			</p:breadCrumb>
 			<p:dataTable id="tableProduto" var="produto"
 				value="#{produtoBean.lista}" frame="box" rules="all"
-				widgetVar="produtos" cellpadding="3">
+				widgetVar="produtos" cellpadding="3" paginator="true"
+				paginatorTemplate="{FirstPageLink} {PreviousPageLink} {PageLinks} 
+				{NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
+				rowsPerPageTemplate="15,30,45">
 				<p:column headerText="Nome" filterBy="#{produto.nome}"
 					filterMatchMode="contains">
 					<h:outputText value="#{produto.nome}" />
