--- a/src/main/webapp/listaVendedor.xhtml
+++ b/src/main/webapp/listaVendedor.xhtml
@@ -8,7 +8,7 @@
 <h:head>
 </h:head>
 <ui:composition template="/WEB-INF/template/template.xhtml">
-	<ui:define name="tituloJanela">Todos Vendedores</ui:define>
+	<ui:define name="tituloJanela">Vendedores</ui:define>
 	<ui:define name="conteudo">
 		<h:form id="form">
 			<p:breadCrumb>
@@ -18,7 +18,10 @@
 					title="Adicionar" icon="pi pi-plus" />
 			</p:breadCrumb>
 			<p:dataTable var="vendedor" value="#{vendedorBean.lista}" frame="box"
-				rules="all" cellpadding="3">
+				rules="all" cellpadding="3" paginator="true"
+				paginatorTemplate="{FirstPageLink} {PreviousPageLink} {PageLinks} 
+				{NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
+				rowsPerPageTemplate="15,30,45">
 				<p:column headerText="ID">
 					<h:outputText value="#{vendedor.id}" />
 				</p:column>
