--- a/src/main/webapp/listaFornecedor.xhtml
+++ b/src/main/webapp/listaFornecedor.xhtml
@@ -10,38 +10,43 @@
 <ui:composition template="/WEB-INF/template/template.xhtml">
 	<ui:define name="tituloJanela">Todos Fornecedores</ui:define>
 	<ui:define name="conteudo">
-		<p:dataTable var="fornecedor" value="#{fornecedorBean.lista}"
-			frame="box" rules="all" cellpadding="3" paginator="true"
-			paginatorTemplate="{FirstPageLink} {PreviousPageLink} {PageLinks} 
+		<h:form id="form">
+			<p:breadCrumb>
+				<p:menuitem value="Início" url="#" icon="pi pi-home" />
+				<p:menuitem value="Fornecedores"
+					url="listaFornecedor.xhtml?faces-redirect=true" />
+				<p:menuitem url="cadastroFornecedor.xhtml?faces-redirect=true"
+					title="Adicionar" icon="pi pi-plus" />
+			</p:breadCrumb>
+			<p:dataTable var="fornecedor" value="#{fornecedorBean.lista}"
+				frame="box" rules="all" cellpadding="3" paginator="true"
+				paginatorTemplate="{FirstPageLink} {PreviousPageLink} {PageLinks} 
 				{NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
-			rowsPerPageTemplate="15,30,45">
-			<f:facet name="header">
-				<p:commandButton value="Novo"
-					action="alterarFornecedor.xhtml?faces-redirect=true" />
-			</f:facet>
-			<p:column headerText="CNPJ">
-				<h:outputText value="#{fornecedor.cnpj}" />
-			</p:column>
+				rowsPerPageTemplate="15,30,45">
+				<p:column headerText="CNPJ">
+					<h:outputText value="#{fornecedor.cnpj}" />
+				</p:column>
 
-			<p:column headerText="Nome">
-				<h:outputText value="#{fornecedor.nome}" />
-			</p:column>
+				<p:column headerText="Nome">
+					<h:outputText value="#{fornecedor.nome}" />
+				</p:column>
 
-			<p:column headerText="Estado">
-				<h:outputText value="#{fornecedor.estado}" />
-			</p:column>
+				<p:column headerText="Estado">
+					<h:outputText value="#{fornecedor.estado}" />
+				</p:column>
 
-			<p:column headerText="Ativo">
-				<h:outputText
-					value="#{fornecedor.ativo == true ? 'Ativo' : 'Desativado'}" />
-			</p:column>
+				<p:column headerText="Ativo">
+					<h:outputText
+						value="#{fornecedor.ativo == true ? 'Ativo' : 'Desativado'}" />
+				</p:column>
 
-			<p:column headerText="Alterar">
-				<p:commandButton action="#{fornecedorBean.alterar(fornecedor)}"
-					value="Alterar" />
-			</p:column>
+				<p:column headerText="Alterar">
+					<p:commandButton action="#{fornecedorBean.alterar(fornecedor)}"
+						value="Alterar" />
+				</p:column>
 
-		</p:dataTable>
+			</p:dataTable>
+		</h:form>
 	</ui:define>
 </ui:composition>
 </html>
