--- a/src/main/webapp/listaFornecedor.xhtml
+++ b/src/main/webapp/listaFornecedor.xhtml
@@ -19,32 +19,48 @@
 					title="Adicionar" icon="pi pi-plus" />
 			</p:breadCrumb>
 			<p:dataTable var="fornecedor" value="#{fornecedorBean.lista}"
-				frame="box" rules="all" cellpadding="3" paginator="true"
+				frame="box" rules="all" widgetVar="fornecedorTable" cellpadding="3" paginator="true"
 				paginatorTemplate="{FirstPageLink} {PreviousPageLink} {PageLinks} 
 				{NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
 				rowsPerPageTemplate="15,30,45">
-				<p:column headerText="CNPJ">
-					<h:outputText value="#{fornecedor.cnpj}" />
-				</p:column>
-
-				<p:column headerText="Nome">
+				<p:column headerText="Nome" filterBy="#{fornecedor.nome}"
+					filterMatchMode="contains">
 					<h:outputText value="#{fornecedor.nome}" />
 				</p:column>
-
-				<p:column headerText="Estado">
-					<h:outputText value="#{fornecedor.estado}" />
+				<p:column headerText="E-mail" filterBy="#{fornecedor.email}"
+					filterMatchMode="contains">
+					<h:outputText value="#{fornecedor.email}" />
 				</p:column>
-
-				<p:column headerText="Ativo">
+				<p:column headerText="CNPJ" filterBy="#{fornecedor.cnpj}"
+					filterMatchMode="contains">
+					<h:outputText value="#{fornecedor.cnpj}" />
+				</p:column>
+				<p:column headerText="Telefone" filterBy="#{fornecedor.telefone}"
+					filterMatchMode="contains">
+					<h:outputText value="#{fornecedor.telefone}" />
+				</p:column>
+				<p:column headerText="Ativo" filterBy="#{fornecedor.ativo}"
+					filterMatchMode="equals">
+					<f:facet name="filter">
+						<p:selectOneButton onchange="PF('fornecedorTable').filter()"
+							styleClass="custom-filter">
+							<f:converter converterId="javax.faces.Boolean" />
+							<f:selectItem itemLabel="+" itemValue="true" />
+							<f:selectItem itemLabel="-" itemValue="false" />
+						</p:selectOneButton>
+					</f:facet>
 					<h:outputText
 						value="#{fornecedor.ativo == true ? 'Ativo' : 'Desativado'}" />
 				</p:column>
-
 				<p:column headerText="Alterar">
 					<p:commandButton action="#{fornecedorBean.alterar(fornecedor)}"
 						value="Alterar" />
 				</p:column>
-
+				<p:column headerText="Excluir">
+					<p:commandButton action="#{fornecedorBean.excluir(fornecedor)}"
+						onclick="if (!confirm('Confirma a exclusão do fornecedor?')) return false"
+						value="Excluir" />
+				</p:column>
 			</p:dataTable>
 		</h:form>
 	</ui:define>
