--- a/src/main/webapp/clienteLogin.xhtml
+++ b/src/main/webapp/clienteLogin.xhtml
@@ -17,7 +17,7 @@
 	<div style="background: black">
 		<h:form id="form">
 			<p:growl id="msg" autoUpdate="true" life="3000" />
-			<p:panel styleClass="loginCorpo">
+			<p:panel style="width: 1340px;height: 450px;text-align: center;">
 				<p:graphicImage style="float:center ;width: 200px;height:200px;"
 					library="imagem" name="logoN.png" />
 				<br />
@@ -30,11 +30,12 @@
 					value="#{UseClienteBean.cliente.senha}" />
 				<br />
 				<br />
-				<p:commandButton style="padding: 5px 5px;border: 10px;margin:5px;" value="Cadastro"
-					action="cadastroClienteSite.xhtml?faces-redirect=true"
-					immediate="true" update="@form"/>
 				<p:commandButton style="padding: 5px 5px;border: 10px;margin:5px;"
-					update="@form" value="Entrar" action="#{UseClienteBean.login()}"/>
+					value="Cadastro"
+					action="cadastroClienteSite.xhtml?faces-redirect=true"
+					immediate="true" update="@form" />
+				<p:commandButton style="padding: 5px 5px;border: 10px;margin:5px;"
+					update="@form" value="Entrar" action="#{UseClienteBean.login()}" />
 			</p:panel>
 		</h:form>
 		<div id="footer">
