--- a/src/main/webapp/carrinhoCliente.xhtml
+++ b/src/main/webapp/carrinhoCliente.xhtml
@@ -13,24 +13,24 @@
 		<h:form id="form">
 			<p:growl id="msg" autoUpdate="true" life="3000" />
 			<h:panelGroup
-				rendered="#{clienteBean.cliente.carrinho.item.size() >= 0}">
+				rendered="#{UseClienteBean.cliente.carrinho.item.size() >= 0}">
 				<p:panel>
 					<p:commandButton style="float: right;" value="Finalizar compra" />
 					<p style="font-size: 1.2em;">Total:
-						#{clienteBean.cliente.carrinho.valor}</p>
+						#{UseClienteBean.cliente.carrinho.valor}</p>
 					<p style="font-size: 1.2em;">Itens:
-						#{clienteBean.cliente.carrinho.item.size()}</p>
+						#{UseClienteBean.cliente.carrinho.item.size()}</p>
 				</p:panel>
-				<p:dataView var="produto" value="#{produtoBean.lista}"
+				<p:dataView var="item" value="#{UseClienteBean.cliente.carrinho.item}"
 					gridIcon="pi pi-th-large" listIcon="pi pi-bars">
 					<p:dataViewGridItem>
-						<p:panel header="#{produto.nome}" style="text-align:center">
+						<p:panel header="#{item.produto.nome}" style="text-align:center">
 							<h:panelGrid columns="1" style="width:100%">
 								<p:graphicImage styleClass="image"
 									style="width: 75px;height: 75px;" library="imagem"
-									name="#{produto.imagem}" />
-								<h:outputText value="#{produto.categoria.nome}" />
-								<h:outputText value="#{produto.valor}" />
+									name="#{item.produto.imagem}" />
+								<h:outputText value="#{item.produto.categoria.nome}" />
+								<h:outputText value="#{item.produto.valor}" />
 								<p:commandLink update=":form:msg" title="Remover">
 									<h:outputText styleClass="ui-icon pi pi-block"
 										style="margin:0 auto;" />
@@ -43,16 +43,16 @@
 							columnClasses="logo,detail">
 							<p:graphicImage styleClass="image"
 								style="width: 75px;height: 75px;" library="imagem"
-								name="#{produto.imagem}" />
+								name="#{item.produto.imagem}" />
 							<p:outputPanel>
 								<h:panelGrid columns="2" cellpadding="5">
 									<h:outputText value="Id:" />
-									<h:outputText value="#{produto.nome}" style="font-weight: bold" />
+									<h:outputText value="#{item.produto.nome}" style="font-weight: bold" />
 									<h:outputText value="Year:" />
-									<h:outputText value="#{produto.categoria.nome}"
+									<h:outputText value="#{item.produto.categoria.nome}"
 										style="font-weight: bold" />
 									<h:outputText value="Color:" />
-									<h:outputText value="#{produto.valor}"
+									<h:outputText value="#{item.produto.valor}"
 										style="font-weight: bold" />
 								</h:panelGrid>
 							</p:outputPanel>
