--- a/src/main/webapp/clienteLogin.xhtml
+++ b/src/main/webapp/clienteLogin.xhtml
@@ -10,6 +10,14 @@
 	<h:outputStylesheet library="css" name="face.css" />
 	<link rel="shortcut icon" type="image/x-icon"
 		href="#{resource['imagem/logoN.png']}" />
+	<style>
+html, body {
+	margin: 0;
+	padding: 0;
+	height: 100%;
+	background: black;
+}
+</style>
 	<h:outputStylesheet library="webapp" />
 	<title>Login cliente</title>
 </h:head>
