--- a/src/main/webapp/visualizarProduto.xhtml
+++ b/src/main/webapp/visualizarProduto.xhtml
@@ -16,7 +16,7 @@
 				<div class="ui-g">
 					<div class="ui-g-3">
 						<p:graphicImage
-							style="width: 200px;height: 200px;padding: 20px;float: left;"
+							style="width: 200px;height: 250px;padding: 20px;float: left;"
 							library="imagem" name="#{produtoBean.produto.imagem}" />
 					</div>
 					<div style="float: center" class="ui-g-6">
@@ -24,7 +24,7 @@
 							<p:panel>
 								<h1>#{produtoBean.produto.nome}</h1>
 								<ul>
-									<li style="font-size: 1.2em; text-align: left;">Preço:
+									<li style="font-size: 1.2em; text-align: left;">Preço: R$
 										#{produtoBean.produto.valor}</li>
 
 									<li style="font-size: 1.2em; text-align: left;">Descrição:
