--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -18,7 +18,7 @@
 				<p:panel style="text-align:center">
 					<h:panelGrid columns="1" style="width:100%">
 						<p:graphicImage style="width: 200px;height: 250px;"
-							library="imagem" name="#{produto.imagem}" />
+							library="/compreseujogo_3.0/src/main/webapp/resources/imagem" name="#{produto.imagem}" />
 						<p:outputLabel value="#{produto.nome}" />
 						<p:outputLabel value="#{produto.plataforma.nome}" />
 						<p:outputLabel value="#{produto.categoria.nome}" />
