UPDATE(loginVendedor) login
A EL estava errada antes

--- a/src/main/webapp/loginVendedor.xhtml
+++ b/src/main/webapp/loginVendedor.xhtml
@@ -25,7 +25,7 @@
 					value="#{administradorBean.administrador.senha}"
 					placeholder="Digite sua senha" required="true" />
 			</p:panelGrid>
-			<p:commandButton value="Entrar" action="#{administradorBean.login()}"
+			<p:commandButton value="Entrar" action="#{UseAdmBean.login()}"
 				update="@form" />
 		</div>
 	</h:form>
