--- a/src/main/webapp/clienteLogin.xhtml
+++ b/src/main/webapp/clienteLogin.xhtml
@@ -27,7 +27,7 @@ html, body {
 			<p:growl id="msg" autoUpdate="true" life="3000" />
 			<p:panel style="width: 1340px;height: 450px;text-align: center;">
 				<p:graphicImage style="float:center ;width: 200px;height:200px;"
-					library="imagem" name="logoN.png" />
+					library="imagem" name="logoB.png" />
 				<br />
 				<p:outputLabel styleClass="fonteLogin" value="E-mail:" />
 				<p:inputText styleClass="inputLogin" style="margin: 10px 0px 5px;"
